fixed alignment issues

--- a/src/pages/AnomalyDetection.module.css
+++ b/src/pages/AnomalyDetection.module.css
@@ -203,13 +203,22 @@
   max-width: 99% !important;
   max-height: 100% !important;
   height: auto !important;
+  margin-left: -8px !important;
 }
 
 .svgPanel {
   width: 100% !important;
   height: 100% !important;
   display: flex !important;
-  align-items: center !important;
+  align-items: flex-start !important;
+  justify-content: center !important;
+}
+
+.svgPanelQ3 {
+  width: 100% !important;
+  height: 100% !important;
+  display: flex !important;
+  align-items: flex-start !important;
   justify-content: center !important;
 }
 
